k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapclass
  labels:
    name: snapclass
    environment: production

# Made with Bob
